--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:css": "postcss src/index.css -o dist/index.css --config postcss.config.js",
+    "watch:css": "postcss src/index.css -o dist/index.css --config postcss.config.js --watch"
   },
   "devDependencies": {
     "typescript": "^5.5.3",
@@ -15,6 +17,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
+    "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.10"
   }
 }
