--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
     "postcss-cli": "^11.0.0",
