--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "vanillatstodo",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "build:css": "postcss src/index.css -o dist/index.css --config postcss.config.js",
-    "watch:css": "postcss src/index.css -o dist/index.css --config postcss.config.js --watch"
+    "build:css": "postcss src/index.css -o dist/index.css",
+    "watch:css": "postcss src/index.css -o dist/index.css --watch"
   },
   "devDependencies": {
+    "postcss-cli": "^11.0.0",
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
   },
@@ -18,7 +19,6 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
-    "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.10"
   }
 }
