adding azure cli checking version

--- a/.github/workflows/deploy-to-aks.yml
+++ b/.github/workflows/deploy-to-aks.yml
@@ -18,6 +18,9 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+    - name: Check Azure CLI version
+      run: az --version        
+
     - name: Install kubelogin
       run: |
         az aks install-cli
