using a diff method for getting SP id

--- a/.github/workflows/deploy-to-aks.yml
+++ b/.github/workflows/deploy-to-aks.yml
@@ -27,7 +27,8 @@ jobs:
 
     - name: Assign Log Analytics Contributor Role
       run: |
-        az role assignment create --assignee $(az ad sp show --id http://vanillatstodosp --query appId -o tsv) --role "Log Analytics Contributor" --scope /subscriptions/e8698c35-8189-4f9a-be17-a00cfa7f6c02/resourceGroups/vanillatstodogroup        
+        SP_ID=$(az ad sp list --display-name vanillatstodosp --query "[].appId" -o tsv)
+        az role assignment create --assignee $SP_ID --role "Log Analytics Contributor" --scope /subscriptions/e8698c35-8189-4f9a-be17-a00cfa7f6c02/resourceGroups/vanillatstodogroup        
 
     - name: Create Log Analytics Workspace
       run: |
