--- a/.github/workflows/deploy-to-aks.yml
+++ b/.github/workflows/deploy-to-aks.yml
@@ -70,11 +70,15 @@ jobs:
 
     - name: Create Docker Hub Secret
       run: |
-        kubectl create secret docker-registry regcred \
-          --docker-server=https://index.docker.io/v1/ \
-          --docker-username=${{ secrets.DOCKER_HUB_USERNAME }} \
-          --docker-password=${{ secrets.DOCKER_HUB_PAT }} \
-          --docker-email=${{ secrets.DOCKER_HUB_EMAIL }}
+        if kubectl get secret regcred > /dev/null 2>&1; then
+          echo "Docker Hub Secret already exists. Skipping creation."
+        else
+          kubectl create secret docker-registry regcred \
+            --docker-server=https://index.docker.io/v1/ \
+            --docker-username=${{ secrets.DOCKER_HUB_USERNAME }} \
+            --docker-password=${{ secrets.DOCKER_HUB_PAT }} \
+            --docker-email=${{ secrets.DOCKER_HUB_EMAIL }}
+        fi
 
     - name: Login to Docker Hub
       run: |
