--- a/.github/workflows/deploy-infrastructure.yml
+++ b/.github/workflows/deploy-infrastructure.yml
@@ -8,10 +8,17 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      TF_WORKSPACE: staging
+      TF_VAR_environment: staging    
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+
+    - name: Format Terraform Code
+      working-directory: ./terraform
+      run: terraform fmt -check      
 
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v1
@@ -21,16 +28,55 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-west-2
+        aws-region: us-east-2
+
+    - name: Check S3 Bucket
+      run: |
+        aws s3api head-bucket --bucket vanillatstodo-terraform-state || \
+        aws s3api create-bucket \
+          --bucket vanillatstodo-terraform-state \
+          --region us-east-2 \
+          --create-bucket-configuration LocationConstraint=us-east-2        
 
     - name: Initialize Terraform
-      run: terraform init
+      working-directory: ./terraform    
+      run: |
+        terraform init \
+          -backend-config="bucket=vanillatstodo-terraform-state" \
+          -backend-config="key=staging/terraform.tfstate" \
+          -backend-config="region=us-east-2"
 
     - name: Validate Terraform
+      working-directory: ./terraform
       run: terraform validate
 
     - name: Plan Terraform
+      working-directory: ./terraform
       run: terraform plan
 
     - name: Apply Terraform
+      working-directory: ./terraform
+      timeout-minutes: 30
+      continue-on-error: false
       run: terraform apply -auto-approve
+
+    - name: Capture Terraform Outputs
+      working-directory: ./terraform
+      run: |
+        echo "EKS_CLUSTER_NAME=$(terraform output -raw eks_cluster_name)" >> $GITHUB_ENV
+        echo "VPC_ID=$(terraform output -raw vpc_id)" >> $GITHUB_ENV
+
+    - name: Notify on Completion
+      if: always()
+      uses: actions/github-script@v6
+      with:
+        script: |
+          const message = `Infrastructure deployment ${context.job.status}
+          - EKS Cluster: ${process.env.EKS_CLUSTER_NAME}
+          - VPC: ${process.env.VPC_ID}`
+          github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: message
+          })      
