--- a/.github/workflows/destroy-infrastructure.yml
+++ b/.github/workflows/destroy-infrastructure.yml
@@ -6,6 +6,9 @@ on:
 jobs:
   destroy:
     runs-on: ubuntu-latest
+    env:
+      TF_WORKSPACE: staging
+      TF_VAR_environment: staging    
 
     steps:
     - name: Checkout repository
@@ -16,13 +19,38 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-west-2
+        aws-region: us-east-2
 
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v1
 
     - name: Initialize Terraform
-      run: terraform init
+      working-directory: ./terraform
+      run: |
+        terraform init \
+          -backend-config="bucket=vanillatstodo-terraform-state" \
+          -backend-config="key=staging/terraform.tfstate" \
+          -backend-config="region=us-east-2"
+
+    - name: Plan Destroy
+      working-directory: ./terraform
+      run: terraform plan -destroy
 
     - name: Destroy Infrastructure
+      working-directory: ./terraform
+      timeout-minutes: 30
+      continue-on-error: false
       run: terraform destroy -auto-approve
+
+    - name: Notify on Completion
+      if: always()
+      uses: actions/github-script@v6
+      with:
+        script: |
+          const message = `Infrastructure destruction ${context.job.status}`
+          github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: message
+          })
