--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -55,8 +55,8 @@ jobs:
 
     - name: Deploy to EKS
       run: |
-        kubectl apply -f ../../vanillatstodo_deployment.yaml
-        kubectl apply -f ../../vanillatstodo_service.yaml
+        kubectl apply -f k8s/vanillatstodo_deployment.yaml
+        kubectl apply -f k8s/vanillatstodo_service.yaml
 
     - name: Wait for Deployment Rollout
       run: |
