--- a/.github/workflows/deploy-infrastructure.yml
+++ b/.github/workflows/deploy-infrastructure.yml
@@ -30,6 +30,37 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-2
 
+    - name: Create State Backend
+      run: |
+        aws s3api head-bucket --bucket vanillatstodo-terraform-state || \
+        aws s3api create-bucket \
+          --bucket vanillatstodo-terraform-state \
+          --region us-east-2 \
+          --create-bucket-configuration LocationConstraint=us-east-2
+
+        aws s3api put-bucket-versioning \
+          --bucket vanillatstodo-terraform-state \
+          --versioning-configuration Status=Enabled
+
+        aws s3api put-bucket-encryption \
+          --bucket vanillatstodo-terraform-state \
+          --server-side-encryption-configuration '{
+            "Rules": [
+              {
+                "ApplyServerSideEncryptionByDefault": {
+                  "SSEAlgorithm": "AES256"
+                }
+              }
+            ]
+          }'
+
+        aws dynamodb describe-table --table-name vanillatstodo-terraform-state-lock || \
+        aws dynamodb create-table \
+          --table-name vanillatstodo-terraform-state-lock \
+          --attribute-definitions AttributeName=LockID,AttributeType=S \
+          --key-schema AttributeName=LockID,KeyType=HASH \
+          --billing-mode PAY_PER_REQUEST
+
     - name: Check S3 Bucket
       run: |
         aws s3api head-bucket --bucket vanillatstodo-terraform-state || \
