adding conditional to wait for infrastructure creation

--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -1,13 +1,17 @@
 name: Deploy to AWS EKS
 
 on:
-  push:
+  workflow_run:
+    workflows: ["Deploy Infrastructure"]
+    types:
+      - completed
     branches:
       - staging
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     env:
       TF_WORKSPACE: staging
       TF_VAR_environment: staging    
