--- a/.github/workflows/deploy-infrastructure.yml
+++ b/.github/workflows/deploy-infrastructure.yml
@@ -16,12 +16,15 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v1
+      with:
+            terraform_version: "1.7.0"  # Specify your desired version
+            cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+
     - name: Format Terraform Code
       working-directory: ./terraform
       run: terraform fmt -check      
-
-    - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v1
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
