--- a/.github/workflows/deploy-infrastructure.yml
+++ b/.github/workflows/deploy-infrastructure.yml
@@ -24,7 +24,12 @@ jobs:
 
     - name: Format Terraform Code
       working-directory: ./terraform
-      run: terraform fmt -check      
+      run: |
+        pwd
+        ls -la
+        terraform version
+        terraform fmt -check -diff
+        terraform fmt -recursive -check
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
