--- a/.github/workflows/deploy-infrastructure.yml
+++ b/.github/workflows/deploy-infrastructure.yml
@@ -16,6 +16,19 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-2      
+
+    - name: Setup Infrastructure Prerequisites
+      run: |
+        chmod +x ./devops/scripts/infra-manager.sh        
+        ./devops/scripts/infra-manager.sh clean        
+        ./devops/scripts/infra-manager.sh check
+
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v1
       with:
