--- a/.github/workflows/deploy-infrastructure.yml
+++ b/.github/workflows/deploy-infrastructure.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - staging
+  workflow_dispatch:      
 
 jobs:
   deploy:
@@ -26,7 +27,7 @@ jobs:
     - name: Setup Infrastructure Prerequisites
       run: |
         chmod +x ./devops/scripts/infra-manager.sh        
-        ./devops/scripts/infra-manager.sh check
+        ./devops/scripts/infra-manager.sh verify
 
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v1
@@ -34,82 +35,47 @@ jobs:
             terraform_version: "1.7.0"  # Specify your desired version
             terraform_wrapper: false
 
-    - name: Format Terraform Code
+    - name: Format and Validate Terraform Code
       working-directory: ./devops/terraform
       run: |
-        terraform version
         terraform fmt -check -diff
-        terraform fmt -recursive -check
+        terraform init
+        terraform validate
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-2
-
-    - name: Create State Backend
-      run: |
-        aws s3api head-bucket --bucket vanillatstodo-terraform-state || \
-        aws s3api create-bucket \
-          --bucket vanillatstodo-terraform-state \
-          --region us-east-2 \
-          --create-bucket-configuration LocationConstraint=us-east-2
-
-        aws s3api put-bucket-versioning \
-          --bucket vanillatstodo-terraform-state \
-          --versioning-configuration Status=Enabled
-
-        aws s3api put-bucket-encryption \
-          --bucket vanillatstodo-terraform-state \
-          --server-side-encryption-configuration '{
-            "Rules": [
-              {
-                "ApplyServerSideEncryptionByDefault": {
-                  "SSEAlgorithm": "AES256"
-                }
-              }
-            ]
-          }'
-
-        aws dynamodb describe-table --table-name vanillatstodo-terraform-state-lock || \
-        aws dynamodb create-table \
-          --table-name vanillatstodo-terraform-state-lock \
-          --attribute-definitions AttributeName=LockID,AttributeType=S \
-          --key-schema AttributeName=LockID,KeyType=HASH \
-          --billing-mode PAY_PER_REQUEST
-
-    - name: Check S3 Bucket
-      run: |
-        aws s3api head-bucket --bucket vanillatstodo-terraform-state || \
-        aws s3api create-bucket \
-          --bucket vanillatstodo-terraform-state \
-          --region us-east-2 \
-          --create-bucket-configuration LocationConstraint=us-east-2        
-
-    - name: Initialize Terraform
-      working-directory: ./devops/terraform    
-      run: |
-        terraform init \
-          -backend-config="bucket=vanillatstodo-terraform-state" \
-          -backend-config="key=staging/terraform.tfstate" \
-          -backend-config="region=us-east-2"
-
-    - name: Validate Terraform
+    - name: Plan with Cost Estimation
+      id: plan
       working-directory: ./devops/terraform
-      run: terraform validate
+      run: |
+        terraform plan -out=tfplan
+        echo "Plan file created at: tfplan"
+        
+        # Show resource changes
+        echo "Planned changes:"
+        terraform show -json tfplan | jq -r '.resource_changes[] | select(.change.actions[] != "no-op")'
 
-    - name: Plan Terraform
-      working-directory: ./devops/terraform
-      run: terraform plan
-
-    - name: Apply Terraform
+    - name: Apply with Safety Measures
       working-directory: ./devops/terraform
       timeout-minutes: 30
-      continue-on-error: false
-      run: terraform apply -auto-approve
+      run: |
+        terraform apply -auto-approve tfplan || {
+          echo "Apply failed, initiating cleanup..."
+          terraform destroy -auto-approve
+          exit 1
+        }
 
-    - name: Capture Terraform Outputs
+    - name: Verify Deployment
+      if: success()
+      working-directory: ./devops/terraform
+      run: |
+        # Verify EKS cluster is ready
+        CLUSTER_STATUS=$(aws eks describe-cluster --name vanillatstodo-cluster --query 'cluster.status' --output text)
+        if [ "$CLUSTER_STATUS" != "ACTIVE" ]; then
+          echo "Cluster is not active. Status: $CLUSTER_STATUS"
+          exit 1
+        fi
+
+    - name: Capture Outputs
+      if: success()
       working-directory: ./devops/terraform
       run: |
         echo "EKS_CLUSTER_NAME=$(terraform output -raw eks_cluster_name)" >> $GITHUB_ENV
@@ -122,11 +88,12 @@ jobs:
         script: |
           const message = `Infrastructure deployment ${context.job.status}
           Environment: ${process.env.TF_WORKSPACE}
+          EKS Cluster: ${process.env.EKS_CLUSTER_NAME}
+          VPC: ${process.env.VPC_ID}
           Timestamp: ${new Date().toISOString()}`;
           
           console.log(message);
           
-          // Only try to create comment if running from a PR
           if (context.payload.pull_request) {
             await github.rest.issues.createComment({
               issue_number: context.payload.pull_request.number,
@@ -134,4 +101,4 @@ jobs:
               repo: context.repo.repo,
               body: message
             });
-          } 
+          }
