--- a/.github/workflows/destroy-infrastructure.yml
+++ b/.github/workflows/destroy-infrastructure.yml
@@ -14,26 +14,14 @@ on:
 jobs:
   destroy:
     runs-on: ubuntu-latest
+    if: github.event.inputs.confirmation == 'DESTROY'
     env:
       TF_WORKSPACE: ${{ github.event.inputs.environment }}
       TF_VAR_environment: ${{ github.event.inputs.environment }}
 
-    if: github.event.inputs.confirmation == 'DESTROY'
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-
-    - name: Verify Prerequisites
-      run: |
-        chmod +x ./devops/scripts/infra-manager.sh
-        ./devops/scripts/infra-manager.sh verify
-
-    - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v1
-      with:
-        terraform_version: "1.7.0"
-        terraform_wrapper: false
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -42,77 +30,72 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-2
 
-    - name: Backup Terraform State
-      working-directory: ./devops/terraform
+    - name: Backup Terraform States
       run: |
         TIMESTAMP=$(date +%Y%m%d_%H%M%S)
-        aws s3 cp s3://vanillatstodo-terraform-state/staging/terraform.tfstate \
-          s3://vanillatstodo-terraform-state/backups/terraform.tfstate.${TIMESTAMP}
+        for state in network eks monitoring; do
+          aws s3 cp \
+            s3://vanillatstodo-terraform-state/staging/${state}.tfstate \
+            s3://vanillatstodo-terraform-state/backups/${state}.tfstate.${TIMESTAMP} || true
+        done
 
-    - name: Initialize Terraform
-      working-directory: ./devops/terraform
-      run: terraform init
-
-    - name: Plan Destroy
-      id: plan
-      working-directory: ./devops/terraform
-      timeout-minutes: 15
+    - name: Destroy Monitoring
+      id: destroy-monitoring
+      working-directory: ./devops/terraform/03-monitoring
       run: |
-        terraform plan -destroy -out=destroy.tfplan
-        echo "Resources to be destroyed:"
-        terraform show -json destroy.tfplan | jq -r '.resource_changes[] | select(.change.actions[0] == "delete")'
+        terraform init \
+          -backend-config="bucket=vanillatstodo-terraform-state" \
+          -backend-config="key=staging/monitoring.tfstate" \
+          -backend-config="region=us-east-2"
+        terraform destroy -auto-approve || echo "::warning::Monitoring destroy failed"
 
-    - name: Safety Check
-      run: |
-        echo "⚠️ DANGER: About to destroy infrastructure in ${{ github.event.inputs.environment }}"
-        echo "Last chance to cancel (waiting 60 seconds)..."
-        sleep 60
-
-    - name: Destroy Infrastructure
-      working-directory: ./devops/terraform
+    - name: Destroy EKS Cluster
+      id: destroy-eks
+      working-directory: ./devops/terraform/02-eks
       timeout-minutes: 30
-      continue-on-error: false
       run: |
-        terraform apply -auto-approve destroy.tfplan || {
-          echo "Destroy failed. Check state and resources manually."
-          exit 1
-        }
+        terraform init \
+          -backend-config="bucket=vanillatstodo-terraform-state" \
+          -backend-config="key=staging/eks.tfstate" \
+          -backend-config="region=us-east-2"
+        terraform destroy -auto-approve || echo "::warning::EKS destroy failed"
 
-    - name: Verify Destruction
-      working-directory: ./devops/terraform
+    - name: Destroy Network
+      id: destroy-network
+      working-directory: ./devops/terraform/01-network
       run: |
-        # Verify EKS cluster deletion
+        terraform init \
+          -backend-config="bucket=vanillatstodo-terraform-state" \
+          -backend-config="key=staging/network.tfstate" \
+          -backend-config="region=us-east-2"
+        terraform destroy -auto-approve || echo "::warning::Network destroy failed"
+
+    - name: Verify Resources Deleted
+      run: |
+        # Check EKS cluster
         if aws eks describe-cluster --name vanillatstodo-cluster 2>/dev/null; then
-          echo "Error: EKS cluster still exists"
+          echo "::error::EKS cluster still exists"
           exit 1
         fi
         
-        # Verify VPC deletion
-        VPC_ID=$(aws ec2 describe-vpcs --filters "Name=tag:Project,Values=vanillatstodo" --query 'Vpcs[*].VpcId' --output text)
+        # Check VPC
+        VPC_ID=$(aws ec2 describe-vpcs --filters "Name:tag:Project,Values=vanillatstodo" --query 'Vpcs[*].VpcId' --output text)
         if [ ! -z "$VPC_ID" ]; then
-          echo "Error: VPC still exists"
+          echo "::error::VPC still exists"
           exit 1
         fi
 
-    - name: Notify on Completion
+    - name: Destroy State Resources
       if: always()
-      uses: actions/github-script@v6
-      with:
-        script: |
-          const status = context.job.status;
-          const message = `Infrastructure destruction ${status}
-          Environment: ${process.env.TF_WORKSPACE}
-          Timestamp: ${new Date().toISOString()}
-          
-          ${status === 'success' ? '✅ All resources destroyed successfully' : '❌ Destroy operation failed'}`;
-          
-          console.log(message);
-          
-          if (context.payload.pull_request) {
-            await github.rest.issues.createComment({
-              issue_number: context.payload.pull_request.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: message
-            });
-          }
+      working-directory: ./devops/terraform/00-state
+      run: |
+        terraform init
+        terraform destroy -auto-approve || echo "::warning::State resources destroy failed"
+
+    - name: Cleanup Summary
+      if: always()
+      run: |
+        echo "Destroy Status:"
+        echo "Monitoring: ${{ steps.destroy-monitoring.outcome }}"
+        echo "EKS: ${{ steps.destroy-eks.outcome }}"
+        echo "Network: ${{ steps.destroy-network.outcome }}"
